style(frontend): 💄 (fix): stylesheet was not making speaker visible upon expanded
Speaker was not turned to block and may have unexpected issues post change

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -33,6 +33,7 @@ p.text
 	color: #ffffffda
 
 .S1 ~ p.text
+	color: #f000ff
 	border-bottom-color: #ff0000
 
 .S2 ~ p.text
@@ -114,7 +115,8 @@ p.text
 			right: 0
 
 		p.text,
-		p.details
+		p.details,
+		p.speaker
 			position: relative
 			height: 24px
 			background: #f0f0f0
